force-app/main/default/objects/TruckLoadLine__c/TruckLoadLine__c.object-meta.xml
<CustomObject>
    <label>Truck Load Line</label>
    <nameField>
        <displayFormat>TLL-{0000}</displayFormat>
        <label>TruckLoadLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Truck Load Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>