force-app/main/default/objects/TruckLoadLine__c/fields/Travel_Days__c.field-meta.xml
<CustomField>
    <fullName>Travel_Days__c</fullName>
    <formula>ERP_Order__r.AcctSeed__Account__r.Total_Travel_Time_in_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>