force-app/main/default/objects/TruckLoadLine__c/fields/Truck_Load__c.field-meta.xml
<CustomField>
    <fullName>Truck_Load__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck Load</label>
    <referenceTo>Truck_Load__c</referenceTo>
    <relationshipLabel>Truck Load Lines</relationshipLabel>
    <relationshipName>Truck_Load_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>